# rust-hyper-jsonapi

./: .env.dist  Cargo.toml  docker-compose.yml
docker/postgres/: Dockerfile  createExtension.sh
migrations/2018-11-10-143259_create_heroes/: up.sql
src/: helpers.rs  main.rs  schema.rs
src/japi/: Cargo.toml
src/japi/src/: api.rs  controller.rs  lib.rs  model.rs  query.rs
src/modules/hero/: controller.rs  model.rs  schema.rs
