[package]
name = "jsonapi-rust"
version = "0.1.0"
authors = ["Naimor <romain.bellande@orange.fr>"]
edition = "2018"

[dependencies]
hyper = "0.12"
futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.0.0", features = ["postgres", "uuid"] }
diesel_codegen = { version = "*", features = ["postgres"] }
r2d2 = "*"
r2d2-diesel = "*"
dotenv = "0.10.1"
envy = "0.3.3"
uuid = { version = "0.6", features = ["serde"] }
japi = { path = "./src/japi" }
